--- a/sidebar.html
+++ b/sidebar.html
@@ -30,9 +30,7 @@
         <li class="nav-item " id="Explore--navbar">
           <a class="nav-link" href="Explore.html" tabindex="3">Explore</a>
         </li>
-        <li class="nav-item " id="RecentlyUploaded-navbar">
-          <a class="nav-link" href="RecentlyUploaded.html" tabindex="3">Recently Uploaded</a>
-        </li>
+
 
         <li class="nav-item ">
           <a class="nav-link" href="#" tabindex="-1">Shorts</a>
@@ -60,7 +58,7 @@
     <div class="sidebar ">
       <ul class="list-group navbar-nav m-auto">
         <div>
-          <li class="nav-item ">
+          <li class="nav-item " id="index">
             <a class="nav-link" href="index.html" tabindex="2"><i class="fas fa-home ml-3"></i>&nbsp;Home </a>
           </li>
           <li class="nav-item " id="Explore">
